tests/baselines/reference/unusedClassesinNamespace2.errors.txt
tests/cases/compiler/unusedClassesinNamespace2.ts(2,5): error TS6195: 'c1' is declared but not used.


==== tests/cases/compiler/unusedClassesinNamespace2.ts (1 errors) ====
    namespace Validation {
        class c1 {
        ~~~~~~~~
!!! error TS6195: 'c1' is declared but not used.
    
        }
    
        export class c2 {
    
        }
    }